# agent-studio

./: IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
agent_studio/: __init__.py
agent_studio/cli/: __init__.py  main.py
agent_studio/compatibility/: __init__.py
agent_studio/core/: __init__.py  a2a_agent.py  base_agent.py  base_executor.py  base_main.py  base_settings.py
agent_studio/management/: __init__.py  cli_integration.py  command_registry.py
agent_studio/management/commands/: __init__.py  project_commands.py
agent_studio/protocols/: schemas.py
agent_studio/workflows/: __init__.py  langgraph_base.py
examples/: text_analyzer_agent.py
my_first_agent/: GETTING_STARTED.md  README.md  main.py  requirements.txt  simple_agent.py
my_first_agent/config/: settings.py
